--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,14 +5,9 @@
   <% @categories.each do  |category|%>
   <li><%= category.title  %></li>
   <div class="card">
-    <ul>
-      <% category.tasks.each do |task|  %>
-      <li>
-        <%= task.title  %>
-        <% unless task.deadline.nil? %>
-          , to read: <%= task.deadline.strftime('%D')  %>
-        <% end %>
-      </li>
+    <ul class="<%=category.title%>">
+      <% category.tasks.sort.each do |task|  %>
+      <%= render 'tasks/task', task: task %>
       <% end %>
     </ul>
   </div>
