--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,13 @@
   text-decoration: line-through;
   color: grey;
 }
+
+.no-decoration{
+  text-decoration: none;
+  color: black;
+}
+
+.read{
+  color: grey;
+  text-decoration: line-through;
+}
