--- a/app/views/email/index.html.erb
+++ b/app/views/email/index.html.erb
@@ -1,6 +1,6 @@
 <center>
   <%= form_tag(email_index_path, method: "post", remote: true)  do %>
-  <%= submit_tag("Recevoir un email", class: "btn btn-primary mb-5") %>
+  <%= submit_tag("Recevoir un email", class: "btn btn-success mb-5") %>
   <% end %>
 </center>
 <div class="container">
